# todo

./: .env  .env.example  .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: d2b3558418e9_create_todo_table.py
tests/: conftest.py  test_auth.py  test_schemas.py  test_security.py  test_todos.py
todo/: app.py  database.py  models.py  schemas.py  security.py  secutiry.py  service.py  settings.py
todo/routers/: auth.py  todos.py  users.py
